<resources>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save">Save</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="search_settings_hint">Search settings</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="more_actions">More Actions</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_lyrics">Toggle lyrics</string>
    <string name="show_lyrics">Show lyrics</string>
    <string name="do_nothing">Do nothing</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">Add to playlist</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_song_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="added_title_to_playing_queue">Added 1 title to the playing queue.</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_name" translatable="false">Effin Music</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="device">Device</string>
    <string name="home">Home</string>
    <string name="library_categories">Library categories</string>
    <string name="navigate">Navigate</string>
    <string name="playing_queue_group">Playing queue</string>
    <string name="menu_group_info">Info</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_summary_album_art_on_lockscreen">Use the currently playing song album cover as the lockscreen wallpaper</string>
    <string name="pref_summary_blurred_album_art">Blur the album cover on the lockscreen. Can cause problems with third party apps and widgets</string>
    <string name="pref_summary_extra_song_info">Show extra Song information, such as file format, bitrate and frequency</string>
    <string name="pref_summary_home_banner">Show or hide the home banner</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_lock_screen">Use Music\'s custom lockscreen controls</string>
    <string name="pref_summary_pause_history">When enabled, newly played songs won\'t show in history</string>
    <string name="pref_summary_remember_tab">Navigate to the last used tab on start</string>
    <string name="pref_summary_enable_search_playlist">Enable search in playlist</string>
    <string name="pref_summary_suggestions">Show New Music Mix on homescreen</string>
    <string name="pref_title_tab_text_mode">Tab titles mode</string>
    <string name="pref_title_toggle_full_screen">Fullscreen app</string>
    <string name="window">Window</string>
    <string name="pref_summary_toggle_full_screen">Toggle fullscreen mode</string>
    <string name="pref_title_album_art_on_lockscreen">Album art on lockscreen</string>
    <string name="pref_title_appbar_mode">App bar mode</string>
    <string name="pref_title_blurred_album_art">Blurred album art</string>
    <string name="pref_title_enable_search_playlist">Enable search in playlist</string>
    <string name="pref_title_home_album_grid_style">Home album grid style</string>
    <string name="pref_title_home_artist_grid_style">Home artist grid style</string>
    <string name="pref_title_home_banner">Home banner</string>
    <string name="pref_title_lock_screen">Lock screen</string>
    <string name="pref_title_pause_history">Pause history</string>
    <string name="pref_title_remember_tab">Remember last tab</string>
    <string name="pref_title_suggestions">Suggestions</string>
    <string name="time_display_mode_title">Time display mode</string>
    <string name="time_display_mode_total">Total time</string>
    <string name="time_display_mode_remaining">Remaining time</string>
    <string name="time_display_mode_toggle">Toggle on tap</string>
    <string name="pref_title_songs_fab_action">Songs FAB Action</string>
    <string name="pref_summary_songs_fab_action">Choose the action for the Floating Action Button in the Songs tab</string>
    <string name="pref_title_artists_fab_action">Artists FAB Action</string>
    <string name="pref_summary_artists_fab_action">Choose the action for the Floating Action Button in the Artists tab</string>
    <string name="pref_title_albums_fab_action">Albums FAB Action</string>
    <string name="pref_summary_albums_fab_action">Choose the action for the Floating Action Button in the Albums tab</string>
    <string name="fab_action_shuffle">Shuffle and Play</string>
    <string name="pref_header_now_playing_metadata">Now Playing Metadata</string>
    <string name="pref_header_now_playing">Now Playing</string>
    <string name="pref_summary_tap_on_title">Go to Album on tap</string>
    <string name="pref_title_tap_on_title">Tap on Title</string>
    <string name="pref_summary_tap_on_artist">Go to Artist on tap</string>
    <string name="pref_title_tap_on_artist">Tap on Artist</string>
    <string name="pref_title_show_cast_button">Show Cast Button</string>
    <string name="pref_summary_show_cast_button">Toggle visibility of the Cast to Device button</string>
    <string name="pref_title_show_song_menu_grid">Show song menu in grid</string>
    <string name="pref_summary_show_song_menu_grid">Show the three-dot menu icon in the Songs section when using Grid View</string>
    <string name="pref_title_show_songs_search_button">Show Songs Search Button</string>
    <string name="pref_summary_show_songs_search_button">Show the search button in the Songs Grid View</string>
    <string name="pref_title_mini_player_time">Mini Player Time</string>
    <string name="pref_summary_mini_player_time">Choose whether to show remaining or total time in the mini player</string>
    <string name="pref_title_show_covers_in_list_views">Show Covers in List Views</string>
    <string name="pref_summary_show_covers_in_list_views">Display covers in song, album, and artist list views</string>
    <string name="pref_title_mini_player_scrolling">Mini Player Scrolling</string>
    <string name="pref_summary_mini_player_scrolling">Enable automatic scrolling of the song title in the mini player</string>
    <string name="pref_title_enable_song_title_marquee">Enable Song Title Marquee</string>
    <string name="pref_summary_enable_song_title_marquee">Enable scrolling effect for song titles in the Songs tab</string>
    <string name="pref_title_show_fab_on_scroll">Show FAB on Scroll</string>
    <string name="pref_summary_show_fab_on_scroll">Keep the Floating Action Button visible when scrolling</string>
    <string name="pref_title_auto_hide_mini_player">Auto-hide Mini Player</string>
    <string name="pref_summary_auto_hide_mini_player">Automatically hide the mini player when scrolling down and show it when scrolling up.</string>
    <string name="keep_header_visible_title">Keep Header Visible</string>
    <string name="keep_header_visible_summary">Keep the top header in the Song View always visible, even when scrolling down.</string>
    <string name="hide_header_title">Hide Header</string>
    <string name="hide_header_summary">Hide Header Always.</string>
    <string name="pref_title_show_artist_in_songs">Show Artist in Songs</string>
    <string name="pref_summary_show_artist_in_songs">Display artist name below song title in song lists</string>
    <string name="pref_title_custom_fallback_artwork">Custom Fallback Artwork</string>
    <string name="pref_summary_custom_fallback_artwork">Choose a custom image to use as fallback artwork for songs without embedded cover art.</string>
    <string name="pref_title_reset_custom_fallback_artwork">Reset Custom Fallback Artwork</string>
    <string name="pref_title_hide_duplicate_songs">Hide Duplicate Songs</string>
    <string name="pref_summary_hide_duplicate_songs">Hide songs that have the same title and artist from the song list.</string>
    <string name="pref_title_prefer_higher_bitrate_songs">Prefer Higher Bitrate Songs</string>
    <string name="pref_summary_prefer_higher_bitrate_songs">When duplicate songs are found, prefer the one with the higher bitrate.</string>
</resources>