<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:title="@string/action_scan"
        app:showAsAction="never" />

    <item
        android:title="@string/playing_queue_group">
        <menu>
            <item
                android:id="@+id/action_play_next"
                android:title="@string/action_play_next"
                android:icon="@drawable/ic_queue_music"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_add_to_current_playing"
                android:title="@string/action_add_to_playing_queue"
                android:icon="@drawable/ic_queue_music"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:title="@string/navigate">
        <menu>
            <item
                android:id="@+id/action_go_to_album"
                android:title="@string/action_go_to_album"
                android:icon="@drawable/ic_album"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_go_to_artist"
                android:title="@string/action_go_to_artist"
                android:icon="@drawable/ic_artist"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:title="@string/device">
        <menu>
            <item
                android:id="@+id/action_set_as_ringtone"
                android:title="@string/action_set_as_ringtone"
                android:icon="@drawable/ic_phonelink_ring"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_delete_from_device"
                android:title="@string/action_delete_from_device"
                android:icon="@drawable/ic_delete"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:title="@string/menu_group_info">
        <menu>
            <item
                android:id="@+id/action_details"
                android:title="@string/action_details"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_tag_editor"
                android:title="@string/action_tag_editor"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
