<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_shuffle"
        android:title="@string/action_shuffle_playlist"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_playlist"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_playlist"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play"
        android:title="@string/action_play"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist" />
    <item
        android:id="@+id/action_rename_playlist"
        android:title="@string/action_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_playlist"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
