<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timeDisplayRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_display_mode_title"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_marginBottom="8dp"/>

    <RadioButton
        android:id="@+id/radioTotalTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_display_mode_total" />

    <RadioButton
        android:id="@+id/radioRemainingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_display_mode_remaining" />

    <RadioButton
        android:id="@+id/radioToggleTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_display_mode_toggle" />

</RadioGroup>
